# lib_manager

./: CMakeLists.txt  README.md
doc/: lib_manager.md
scripts/cmake/: lib_manager-config.cmake.in  lib_manager.cmake  mars-config.cmake.in
src/: LibInterface.h  LibInterface.hpp  LibManager.cpp  LibManager.h  LibManager.hpp
test/: CMakeLists.txt  abcd.cpp  abcd.hpp  test.cpp
